--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -11,6 +11,7 @@
             "name_split_error": "Ungültiger Name. Versuche \"vor_name, nach_name\".",
             "student_not_found": "Schüler nicht gefunden. Überprüfen Sie den Namen oder wählen Sie eine andere Quelle.",
             "teacher_not_found": "Lehrer nicht gefunden. Überprüfen Sie den Namen oder wählen Sie eine andere Quelle.",
+            "class_not_found": "Klasse nicht gefunden. Überprüfen Sie den Klasse oder wählen Sie eine andere Quelle.",
             "no_rights_for_timetable": "Keine rechte für Stundenplan.",
             "unknown": "Unerwarteter Fehler"
         },
