--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -27,5 +27,17 @@
                 }
             }
         }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "calendar_long_name": "Kalender langer Name"
+                },
+                "data_description": {
+                    "calendar_long_name": "Verwende den langen Namen der Stunden im Kalender."
+                }
+            }
+        }
     }
 }
