--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -32,8 +32,8 @@
         "step": {
             "init": {
                 "data": {
-                    "calendar_long_name": "Kalender langer Name",
-                    "calendar_show_cancelled_lessons": "ausfallende Stunden"
+                    "calendar_long_name": "Kalender - langer Name",
+                    "calendar_show_cancelled_lessons": "Kalender - ausfallende Stunden"
                 },
                 "data_description": {
                     "calendar_long_name": "Verwende den langen Namen der Stunden im Kalender.",
