--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -32,8 +32,8 @@
         "step": {
             "init": {
                 "data": {
-                    "calendar_long_name": "Calendar long name",
-                    "calendar_show_cancelled_lessons": "Cancelled lessons"
+                    "calendar_long_name": "Calendar - long name",
+                    "calendar_show_cancelled_lessons": "Calendar - cancelled lessons"
                 },
                 "data_description": {
                     "calendar_long_name": "Use the long name of the hours in the calendar.",
