--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -1,45 +1,49 @@
 {
-    "config": {
-        "abort": {
-            "already_configured": "Der Sensor ist bereits konfiguriert."
-        },
-        "error": {
-            "cannot_connect": "Verbindung fehlgeschlagen. Überprüfe die Server Domain.",
-            "invalid_auth": "Ungültige Authentifizierung",
-            "bad_credentials": "Ungültiger Benutzername und / oder Passwort",
-            "school_not_found": "Ungültiger Schulname/-id",
-            "name_split_error": "Ungültiger Name. Versuche \"vor_name, nach_name\".",
-            "student_not_found": "Schüler nicht gefunden. Überprüfen Sie den Namen oder wählen Sie eine andere Quelle.",
-            "teacher_not_found": "Lehrer nicht gefunden. Überprüfen Sie den Namen oder wählen Sie eine andere Quelle.",
-            "class_not_found": "Klasse nicht gefunden. Überprüfen Sie den Klasse oder wählen Sie eine andere Quelle.",
-            "no_rights_for_timetable": "Keine rechte für Stundenplan.",
-            "unknown": "Unerwarteter Fehler"
-        },
-        "step": {
-            "user": {
-                "data": {
-                    "server": "Server",
-                    "school": "Schule",
-                    "username": "Benutzername",
-                    "password": "Passwort",
-                    "timetable_source": "Stundenplan Quelle",
-                    "timetable_source_id": "Ganzer Name/ Klasse/ Fach/ Raum"
-                }
-            }
-        }
+  "config": {
+    "abort": {
+      "already_configured": "Der Sensor ist bereits konfiguriert."
     },
-    "options": {
-        "step": {
-            "init": {
-                "data": {
-                    "calendar_long_name": "Kalender - langer Name",
-                    "calendar_show_cancelled_lessons": "Kalender - ausfallende Stunden"
-                },
-                "data_description": {
-                    "calendar_long_name": "Verwende den langen Namen der Stunden im Kalender.",
-                    "calendar_show_cancelled_lessons": "Zeige ausfallende Stunden im Kalender an."
-                }
-            }
+    "error": {
+      "cannot_connect": "Verbindung fehlgeschlagen. Überprüfe die Server Domain.",
+      "invalid_auth": "Ungültige Authentifizierung",
+      "bad_credentials": "Ungültiger Benutzername und / oder Passwort",
+      "school_not_found": "Ungültiger Schulname/-id",
+      "name_split_error": "Ungültiger Name. Versuche \"vor_name, nach_name\".",
+      "student_not_found": "Schüler nicht gefunden. Überprüfen Sie den Namen oder wählen Sie eine andere Quelle.",
+      "teacher_not_found": "Lehrer nicht gefunden. Überprüfen Sie den Namen oder wählen Sie eine andere Quelle.",
+      "class_not_found": "Klasse nicht gefunden. Überprüfen Sie den Klasse oder wählen Sie eine andere Quelle.",
+      "no_rights_for_timetable": "Keine rechte für Stundenplan.",
+      "unknown": "Unerwarteter Fehler"
+    },
+    "step": {
+      "user": {
+        "data": {
+          "server": "Server",
+          "school": "Schule",
+          "username": "Benutzername",
+          "password": "Passwort",
+          "timetable_source": "Stundenplan Quelle",
+          "timetable_source_id": "Ganzer Name/ Klasse/ Fach/ Raum"
         }
+      }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "calendar_long_name": "Kalender - langer Name",
+          "calendar_show_cancelled_lessons": "Kalender - ausfallende Stunden",
+          "keep_loged_in": "Eingeloggt bleiben",
+          "filter_mode": "Fächer Filter",
+          "filter_subjects": "Fächer Filter - Fächer"
+        },
+        "data_description": {
+          "calendar_long_name": "Verwende den langen Namen der Stunden im Kalender.",
+          "calendar_show_cancelled_lessons": "Zeige ausfallende Stunden im Kalender an.",
+          "keep_loged_in": "Versucht die Session zu speichern. (BETA)"
+        }
+      }
+    }
+  }
 }
