--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -41,6 +41,9 @@
           "filter_mode": "Filter mode",
           "filter_subjects": "Filter mode - subjects",
           "filter_description": "Filter Mode - Description"
+        },
+        "data_description": {
+          "filter_description": "Hide lessons that contain the following phrases in the description. (Comma-separated list)"
         }
       },
       "calendar": {
@@ -66,7 +69,6 @@
         },
         "data_description": {
           "keep_loged_in": "Try to save the session data. (BETA)",
-          "filter_description": "Hide lessons with phrase in description.",
           "generate_json": "Generate JSON in Sensor Attributes - enable only if needed."
         }
       }
