--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -74,6 +74,13 @@
           "generate_json": "Generiert JSON in Sensor Attribute - nur aktivieren wenn es benötigt wird.",
           "extended_timetable": "Fordere erweiterte Stundenplan an. (Wird für Fächer Filter - Beschreibung benötigt)"
         }
+      },
+      "notify": {
+        "title": "Notify Einstellungen",
+        "description": "Einstellungen zu Benachrichtungen",
+        "data": {
+          "notify_entity_id": "Notify Service ID (Bsp: notify.discord)"
+        }
       }
     }
   }
