--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -52,12 +52,14 @@
         "data": {
           "calendar_long_name": "Kalender - langer Name",
           "calendar_show_cancelled_lessons": "Kalender - ausfallende Stunden",
-          "calendar_description": "Kalender Beschreibung"
+          "calendar_description": "Kalender - Beschreibung",
+          "calendar_room": "Kalender - Ort"
         },
         "data_description": {
           "calendar_long_name": "Verwende den langen Namen der Stunden im Kalender.",
           "calendar_show_cancelled_lessons": "Zeige ausfallende Stunden im Kalender an.",
-          "calendar_description": "Bestimme, was in der Beschreibung eines Kalender-Events stehen soll."
+          "calendar_description": "Bestimme, was in der Beschreibung eines Kalender-Events stehen soll.",
+          "calendar_room": "Bestimme, was im Kalender als Ort angezeigt wirt."
         }
       },
       "backend": {
