--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -13,6 +13,7 @@
       "teacher_not_found": "Teacher not found. Check the name or pick other source.",
       "class_not_found": "Class not found. Check the class or pick other source.",
       "no_rights_for_timetable": "No rights for timetable.",
+
       "unknown": "Unexpected error"
     },
     "step": {
@@ -31,6 +32,7 @@
   "options": {
     "error": {
       "extended_timetable": "\"Request extended timetable\" is required for the \"Subject Filter - Description\" and \"Calendar Description\" (Lesson Info) option",
+      "unknown_service": "Service ID not found.",
       "unknown": "Unexpected error"
     },
     "step": {
@@ -76,6 +78,13 @@
         "data_description": {
           "keep_loged_in": "Try to save the session data. (BETA)",
           "generate_json": "Generate JSON in Sensor Attributes - enable only if needed."
+        }
+      },
+      "notify": {
+        "title": "Notify Settings",
+        "description": "Notification Settings",
+        "data": {
+          "notify_entity_id": "Notify Service ID (e.g: notify.discord)"
         }
       }
     }
