--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -84,7 +84,11 @@
         "title": "Notify Einstellungen",
         "description": "Einstellungen zu Benachrichtungen",
         "data": {
-          "notify_entity_id": "Notify Service ID (Bsp: notify.discord)"
+          "notify_entity_id": "Notify Service ID (Bsp: notify.discord)",
+          "code": "Stunden status ändert sich",
+          "rooms": "Raum ändert sich",
+          "cancelled": "Stunde fällt aus",
+          "lesson change": "Eine Stunde wurde ausgetausch"
         }
       }
     }
